# statslib-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: graph.rs  lib.rs
src/distribution/: exponential.rs  mod.rs  normal.rs  uniform.rs
