[package]
name = "stats-lib"
version = "0.1.0"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Intermediate statistics library"
readme = "README.md"
repository = "https://github.com/Hpmason/statslib-rs"
keywords = ["stats", "distribution"]

[dependencies]
libm = "0.2"